deployment/01_deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hello-openshift
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-openshift
  template:
    metadata:
      labels:
        app: hello-openshift
    spec:
      containers:
      - name: hello-openshift
        image: 172.30.1.1:5000/training09/hello-openshift:build-1
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /
            port: 9080
            scheme: HTTP
          initialDelaySeconds: 10
        readinessProbe:
          httpGet:
            path: /hello-openshift/resources/hello
            port: 9080
            scheme: HTTP
          initialDelaySeconds: 30
      restartPolicy: Always
---
